; ModuleID = '/home/carl/AnghaBench/php-src/win32/extr_sendmail.c_FormatEmailAddress.c'
source_filename = "/home/carl/AnghaBench/php-src/win32/extr_sendmail.c_FormatEmailAddress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAIL_BUFFER_SIZE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @FormatEmailAddress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FormatEmailAddress(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = call i8* @strchr(i8* %11, i8 signext 60)
  store i8* %12, i8** %8, align 8
  %13 = icmp ne i8* %12, null
  br i1 %13, label %14, label %28

14:                                               ; preds = %3
  %15 = load i8*, i8** %8, align 8
  %16 = call i8* @strchr(i8* %15, i8 signext 62)
  store i8* %16, i8** %9, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %14
  %19 = load i8*, i8** %9, align 8
  store i8 0, i8* %19, align 1
  %20 = load i8*, i8** %5, align 8
  %21 = load i32, i32* @MAIL_BUFFER_SIZE, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = load i8*, i8** %8, align 8
  %24 = getelementptr inbounds i8, i8* %23, i64 1
  %25 = call i32 @snprintf(i8* %20, i32 %21, i8* %22, i8* %24)
  store i32 %25, i32* %10, align 4
  %26 = load i8*, i8** %9, align 8
  store i8 62, i8* %26, align 1
  %27 = load i32, i32* %10, align 4
  store i32 %27, i32* %4, align 4
  br label %34

28:                                               ; preds = %14, %3
  %29 = load i8*, i8** %5, align 8
  %30 = load i32, i32* @MAIL_BUFFER_SIZE, align 4
  %31 = load i8*, i8** %7, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @snprintf(i8* %29, i32 %30, i8* %31, i8* %32)
  store i32 %33, i32* %4, align 4
  br label %34

34:                                               ; preds = %28, %18
  %35 = load i32, i32* %4, align 4
  ret i32 %35
}

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
